Closed Bug 1779848 Opened 2 years ago Closed 2 years ago

mFd being nullptr in nsNSSSocketInfo::ClientAuthCertificateSelected means the connection has closed and isn't an error

Categories

(Core :: Security: PSM, defect, P1)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox102 --- unaffected
firefox103 --- unaffected
firefox104 --- fixed

People

(Reporter: keeler, Assigned: keeler)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [psm-assigned])

Attachments

(1 file)

If nsNSSSocketInfo::mFd is nullptr, it means the connection has been closed. This isn't an error, and ClientAuthCertificateSelected shouldn't assert if this happens.

If nsNSSSocketInfo::mFd is nullptr, it means the connection has been closed.
This isn't an error, and ClientAuthCertificateSelected shouldn't assert if this
happens.

Set release status flags based on info from the regressing bug 696976

Pushed by dkeeler@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bffadc976d44
don't assert if mFd is null in nsNSSSocketInfo::ClientAuthCertificateSelected r=ckerschb
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: