Bug 1779848 - don't assert if mFd is null in nsNSSSocketInfo::ClientAuthCertificateSelected r=ckerschb

If nsNSSSocketInfo::mFd is nullptr, it means the connection has been closed.
This isn't an error, and ClientAuthCertificateSelected shouldn't assert if this
happens.

Differential Revision: https://phabricator.services.mozilla.com/D151962